# simikit

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  ruff_and_cov_check.yml  tests.yml
config/: config.toml
doc/: README_cn.md
simikit/: api.py  config.py
simikit/features/: __init__.py  __init__.pyi  base.py  hash.py  transformer.py
simikit/metrics/: __init__.py  __init__.pyi  vector_distance.py
simikit/utils/: error_catcher.py  images.py  logger.py  timer.py
tests/: test_config.py  test_features_base.py  test_features_hash.py  test_features_transformer.py  test_utils_images.py  test_utils_logger.py
